--- a/.github/workflows/features-and-predictions.yml
+++ b/.github/workflows/features-and-predictions.yml
@@ -15,12 +15,12 @@ jobs:
       - name: setup python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8.x'
+          python-version: '3.8'
           
       - name: install python packages
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install --upgrade --upgrade-strategy eager -r requirements.txt
           
       - name: execute python workflows from bash script
         env: 
