--- a/.github/workflows/features-and-predictions.yml
+++ b/.github/workflows/features-and-predictions.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.8'
+          cache: 'pip'
           
       - name: install python packages
         run: |
