--- a/.github/workflows/features-and-predictions.yml
+++ b/.github/workflows/features-and-predictions.yml
@@ -26,7 +26,7 @@ jobs:
       - name: execute python workflows from bash script
         env: 
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
-        run: run.sh
+        run: ./src/01-module/scripts/run-feature-and-prediction-pipelines.sh
 
       - name: publish github pages
         uses: stefanzweifel/git-auto-commit-action@v4
