--- a/.github/workflows/features-and-predictions.yml
+++ b/.github/workflows/features-and-predictions.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - name: checkout repo content
         uses: actions/checkout@v2
+      - name: Check Python version
+        run: python --version
+
 
       - name: setup python
         uses: actions/setup-python@v2
@@ -22,7 +25,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade --upgrade-strategy eager -r requirements.txt
-          
+      - name: Install Jupyter Notebook kernel
+        run: python -m ipykernel install --user --name=python3
       - name: execute python workflows from bash script
         env: 
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
